--- a/Paginas/contacto.html
+++ b/Paginas/contacto.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Segunda Entrega</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
 
@@ -40,10 +40,10 @@
 </header>
 <main>
     <h1>
-        KAXOF AGENCIA DE MARKETING DIGITAL. 
+        CONTACTO
     </h1>
-    <p>Les damos la bienvenida a nuestro sitio web. Estamos transformando negocios digitales con creatividad y elegancia.</p>
-    <img src="../imagenes/no te quedes flotando en el espacio.png" class="fliyer-x" alt="fliyer">
+    <p>¿Quieres ver más de nuestro trabajo? Síguenos en Instagram para descubrir contenido exclusivo, tutoriales, consejos y mucho más. ¡No te lo pierdas! @KAXOF.OK</p>
+    <img src="../imagenes/mi-instagram.png" class="fliyer-instagram" alt="instagram">
     </main>
         <footer>
             Todos los derechos reservados el pez en la luna
