--- a/Paginas/portfolio.html
+++ b/Paginas/portfolio.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Segunda Entrega</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
 
@@ -40,10 +40,14 @@
 </header>
 <main>
     <h1>
-        KAXOF AGENCIA DE MARKETING DIGITAL. 
+        PORTFOLIO 
     </h1>
-    <p>Les damos la bienvenida a nuestro sitio web. Estamos transformando negocios digitales con creatividad y elegancia.</p>
-    <img src="../imagenes/no te quedes flotando en el espacio.png" class="fliyer-x" alt="fliyer">
+    <p>
+        En KAXOF, nos apasiona transformar ideas en resultados tangibles. Aquí encontrarás una muestra de nuestro trabajo, desde campañas de redes sociales que generan engagement hasta estrategias de branding que construyen marcas sólidas. Cada proyecto es único, y nos enorgullece mostrar la diversidad de soluciones que hemos creado para nuestros clientes.
+
+Explora nuestros casos de éxito y descubre cómo hemos ayudado a empresas locales en Lomas de Zamora y más allá a alcanzar sus objetivos de marketing digital.
+    </p>
+    <img src="../imagenes/imagen-00.png" class="fliyer-x" alt="fliyer">
     </main>
         <footer>
             Todos los derechos reservados el pez en la luna
