--- a/Paginas/quienes-somos.html
+++ b/Paginas/quienes-somos.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Segunda Entrega</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
 
@@ -38,12 +38,21 @@
     </div>
 </nav>
 </header>
-<main>
+<main class="quienes-somos">
     <h1>
-        KAXOF AGENCIA DE MARKETING DIGITAL. 
+        QUIENES SOMOS 
     </h1>
-    <p>Les damos la bienvenida a nuestro sitio web. Estamos transformando negocios digitales con creatividad y elegancia.</p>
-    <img src="../imagenes/no te quedes flotando en el espacio.png" class="fliyer-x" alt="fliyer">
+    <div class="contenido">
+        <img src="../imagenes/quienes-somos.jpg" class="fliyer-x" alt="fliyer">
+        <div class="texto">
+    <p>Somos una agencia de marketing digital apasionada por impulsar el crecimiento de negocios locales en Lomas de Zamora y alrededores. Nacimos en noviembre de 2023 con la visión de brindar soluciones innovadoras y personalizadas para cada cliente. Creemos en el poder del marketing digital para conectar marcas con su público objetivo y generar resultados tangibles.
+
+        Nuestro equipo está formado por profesionales creativos y estratégicos, comprometidos con la excelencia y la atención al detalle. Nos mantenemos actualizados con las últimas tendencias y herramientas del marketing digital para ofrecer a nuestros clientes las mejores soluciones.
+        
+        En KAXOF, nos enfocamos en construir relaciones a largo plazo con nuestros clientes, basadas en la confianza y la transparencia. Queremos ser tu aliado estratégico en el camino hacia el éxito digital.</p>
+    </div>
+    
+</div>
     </main>
         <footer>
             Todos los derechos reservados el pez en la luna
