--- a/Paginas/servicios.html
+++ b/Paginas/servicios.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Segunda Entrega</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
 
@@ -40,10 +40,28 @@
 </header>
 <main>
     <h1>
-        KAXOF AGENCIA DE MARKETING DIGITAL. 
+        SERVICIOS 
     </h1>
-    <p>Les damos la bienvenida a nuestro sitio web. Estamos transformando negocios digitales con creatividad y elegancia.</p>
-    <img src="../imagenes/no te quedes flotando en el espacio.png" class="fliyer-x" alt="fliyer">
+    <P>
+        En KAXOF contamos una variedad de servicios para potenciar tus redes sociales y conectar tus productos y servicios con tu publico objetivo.
+    </P>
+    <section class="services">
+    <div class="service">
+        <img src="../imagenes/redes-sociales.jpeg" alt="Gestión de Redes Sociales">
+        <h2>Gestión de Redes Sociales</h2>
+        <p>Aumenta tu presencia en línea con estrategias efectivas de gestión de redes sociales.</p>
+    </div>
+    <div class="service">
+        <img src="../imagenes/publicidad-digital.jpeg" alt="Publicidad Digital">
+        <h2>Publicidad Digital</h2>
+        <p>Llega a tu público objetivo con campañas de publicidad digital personalizadas.</p>
+    </div>
+    <div class="service">
+        <img src="../imagenes/branding.jpeg" alt="Branding">
+        <h2>Branding</h2>
+        <p>Construye una marca sólida y memorable con nuestros servicios de branding.</p>
+    </div>
+</section>
     </main>
         <footer>
             Todos los derechos reservados el pez en la luna
